# frontend-for-ds

./: .env.example  pyproject.toml
src/frontend_for_ds/: __init__.py  backend.py  dash_server.py  fasthtml_server.py  html_server.py  json_server.py  plain_demo.py  streamlit_front.py  streamlit_server.py
static/: styles.css
templates/: main.html  messages.html
